--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <a href="Home.html">Home</a>
         <a href="cv.html">Download CV</a>
         <a href="contact.html">Contact Me</a>
+	<a href="undang.html">Undang</a>
     </nav>
 
 
