--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Curriculum Vitae - Feby Heriawan</title>
+    <title>Skuy Wedding - Undangan Online</title>
 </head>
 
 <body>
-    <nav>
-        <a href="Home.html">Home</a>
-        <a href="cv.html">Download CV</a>
-        <a href="contact.html">Contact Me</a>
-        <a href="vc.html">visual code</a>
-    </nav>
-
-
+        <a href="bukaundangan.html">Open Invitation</a>
 </body>
 
 </html>
