--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-        <a href="bukaundangan.html">Open Invitation</a>
+    <h1>Wedding Invitation</h1>    
+    <a href="bukaundangan.html">Open Invitation</a>
 </body>
 
 </html>
