--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
-    <title>Skuy Wedding - Undangan Online</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skuy Wedding</title>
 </head>
-
 <body>
-    <h1>Wedding Invitation</h1>    
-    <a href="bukaundangan.html">Open Invitation</a>
+    <div class="header">
+        <h2>Wedding Invitation</h2>
+    </div>
+    <div class="namapengantin">
+        <h1>Andra & Andri</h1>
+    </div>
+    <div class="btn-open">
+        <a href="#"><button>Open Invitation</button></a>
+    </div>
 </body>
-
 </html>
