tambah isi.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Andra & Andri</h1>
     </div>
     <div class="btn-open">
-        <a href="#"><button>Open Invitation</button></a>
+        <a href="isi.html"><button>Open Invitation</button></a>
     </div>
 </body>
 </html>
