--- a/isi.html
+++ b/isi.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Undangan Online - Skuy Wedding</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h2>The Wedding Of</h2>
+    </div>
+    <div class="namapengantin">
+        <h1>Andri & Andra</h1>
+    </div>
+    <div class="btn-std">
+        <a href="#"><button>Save The Date</button></a>
+    </div>
+    <div>
+        <div class="img-head">
+            <img src="#" alt="">
+        </div>
+        <div class="sic">
+            <h1>Sebuah Ikatan Suci</h1>
+        </div>
+        <div class="par.kata">
+            <p>"Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya, dan Dia menjadikan di antaramu rasa kasih dan sayang."</p>
+            <p>(QS Ar-Rum:21)</p>
+        </div>
+
+    </div>
+    <div>
+        <div class="std">
+            <h2>Save the date</h2>
+        </div>
+    </div>
 </body>
 </html>
