--- a/isi.html
+++ b/isi.html
@@ -13,8 +13,8 @@
     <div class="namapengantin">
         <h1>Andri & Andra</h1>
     </div>
-    <div class="btn-std">
-        <a href="#"><button>Save The Date</button></a>
+    <div class="btn-tgl">
+        <a href="#"><button>24 Juli 2024</button></a>
     </div>
     <div>
         <div class="img-head">
@@ -33,6 +33,35 @@
         <div class="std">
             <h2>Save the date</h2>
         </div>
+        <div class="box-akad">
+            <div>
+                <h3>Akad Nikah</h3>
+            </div>
+            <div>
+                <p>Minggu, 24 Juli 2024</p>
+                <p>09.00 - Selesai</p>
+                <p>Jalan Cikambuy Hilir</p>
+            </div>
+        </div>
+        <div class="box-resepsi">
+            <div>
+                <h3>Resepsi</h3>
+            </div>
+            <div>
+                <p>Minggu, 24 Juli 2024</p>
+                <p>09.00 - Selesai</p>
+                <p>Jalan Cikambuy Hilir</p>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="b&d">
+            <h2>Bride & Groom</h2>
+        </div>
+        <div>
+            <p>Maha suci Allah SWT yang telah menciptakan berpasang-pasangan. Ya Allah, perkenankanlah kami merangkai kasih sayang yang Kau ciptakan di antara putra-putri kami:</p>
+        </div>
+        
     </div>
 </body>
 </html>
