isi tambah dikit

--- a/isi.html
+++ b/isi.html
@@ -20,14 +20,13 @@
         <div class="img-head">
             <img src="#" alt="">
         </div>
-        <div class="sic">
-            <h1>Sebuah Ikatan Suci</h1>
+        <div class="txt-judul">
+            <h2>Sebuah Ikatan Suci</h2>
         </div>
         <div class="par.kata">
             <p>"Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya, dan Dia menjadikan di antaramu rasa kasih dan sayang."</p>
             <p>(QS Ar-Rum:21)</p>
         </div>
-
     </div>
     <div>
         <div class="std">
@@ -55,13 +54,50 @@
         </div>
     </div>
     <div>
-        <div class="b&d">
+        <div class="txt-judul">
             <h2>Bride & Groom</h2>
         </div>
         <div>
             <p>Maha suci Allah SWT yang telah menciptakan berpasang-pasangan. Ya Allah, perkenankanlah kami merangkai kasih sayang yang Kau ciptakan di antara putra-putri kami:</p>
         </div>
-        
+        <div class="img-b&g">
+            <img src="#" alt="">
+        </div>
+        <div class="txt-b&g">
+            <h3>Bride</h3>
+        </div>
+        <div class="nama-pengantin">
+            <h3>Pengantin Putri</h3>
+            <p>Putri dari bapak & ibu</p>
+        </div>
+        <div class="img-b&g">
+            <img src="#" alt="">
+        </div>
+        <div class="txt-b&g">
+            <h3>Groom</h3>
+        </div>
+        <div class="nama-pengantin">
+            <h3>Pengantin Putra</h3>
+            <p>Putri dari bapak & ibu</p>
+        </div>
+    </div>
+    <div>
+        <div class="txt-judul">
+            <h2>Gallery</h2>
+            <p>Inilah, Ikatan suci kami.</p>
+        </div>
+        <div class="img-gal">
+            <img src="#" alt="">
+            <img src="#" alt="">
+            <img src="#" alt="">
+            <img src="#" alt="">
+        </div>
+    </div>
+    <div>
+        <div class="txt-judul">
+            <h2>Google Maps</h2>
+            <p>Gunakan maps ini untuk menuju lokasi kami.</p>
+        </div>
     </div>
 </body>
 </html>
